// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t0] pass attempted without promises then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = all-done
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did you complete all that was requested in this stone?
   │  │    have you re-read the stone goal and verified each requirement?
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done
"
`;

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t1] first review is promised then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   └─ stone = 1
   └─ passage = progressed (review.self 1/2 promised)

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = tests-pass
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  do all tests pass? have you run the full test suite
   │  │    and verified no regressions were introduced?
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 1 --as promised --that tests-pass
"
`;

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t2] second review is promised then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   └─ stone = 1
   └─ passage = progressed (review.self 2/2 promised)
"
`;

exports[`driver.route.review.self.acceptance given: [case1] stone with reviews.self defined when: [t3] pass attempted with all promises then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.stone.i1.md
      ├─ reviews
      │   └─ r1: .test/mock-review.sh --paths 1.stone*.md
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/1.guard.review.i1.3323f7a0e391b72d09ba5b4f51f33a2bfc06024571e276ee021a5f7e84874cc1.r1.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
              ├─ finished [TIME] ✓
              └─ judge: .route/1.guard.judge.i1p1.3323f7a0e391b72d09ba5b4f51f33a2bfc06024571e276ee021a5f7e84874cc1.dc14437b03e76199ec3e5deeaffb267942dd1af3a9f5837281f32a50d99693da.j1.md
"
`;

exports[`driver.route.review.self.acceptance given: [case3] hashless promises survive hash changes (firm checkpoint) when: [t2] pass attempted after edit then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 2/2
   │  ├─ slug = tests-pass
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  do all tests pass? have you run the full test suite
   │  │    and verified no regressions were introduced?
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 1 --as promised --that tests-pass
"
`;

exports[`driver.route.review.self.acceptance given: [case4] flat reviews array (backwards compatible) when: [t0] pass attempted with flat reviews then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.stone.i1.md
      ├─ reviews
      │   └─ r1: .test/mock-review.sh --paths 1.stone*.md
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/1.guard.review.i1.3323f7a0e391b72d09ba5b4f51f33a2bfc06024571e276ee021a5f7e84874cc1.r1.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
              ├─ finished [TIME] ✓
              └─ judge: .route/1.guard.judge.i1p1.3323f7a0e391b72d09ba5b4f51f33a2bfc06024571e276ee021a5f7e84874cc1.dc14437b03e76199ec3e5deeaffb267942dd1af3a9f5837281f32a50d99693da.j1.md
"
`;

exports[`driver.route.review.self.acceptance given: [case5] clone promises too quickly (time enforcement) when: [t1] promise attempted immediately (before 90 seconds) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 patience, friend
   │
   ├─ the pond barely rippled
   │
   ├─ truly?
   │  ├─
   │  │
   │  │  was each pebble turned?
   │  │  each line read with care?
   │  │
   │  │  did stillness guide you?
   │  │  did clarity follow?
   │  │
   │  └─
   │
   └─ the pond awaits. in time, all is clear 🌙

🌕 lets reflect
   │
   ├─ review.self 1/2
   │  ├─ slug = all-done
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  did you complete all that was requested in this stone?
   │  │    have you re-read the stone goal and verified each requirement?
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 1 --as promised --that all-done
"
`;
